--- a/Alterwego/css/users.css
+++ b/Alterwego/css/users.css
@@ -10,14 +10,16 @@
 }
 .users .content .col-list{
 	width: 96px;
-    padding: 5px;
-    /*border: 1px solid black;*/
+    padding-top: 5px;
+    /* border: 1px solid black; */
     display: table-cell;
     text-align: left;
     text-transform: uppercase;
     font-size: 11px;
     font-weight: 600;
-    font-family: arial,sans-serif;    
+    font-family: arial,sans-serif;
+    padding-right: 5px;
+    padding-left: 5px;
 }
 .list{
 	padding-left: 12px;
@@ -49,11 +51,20 @@
 	width: 84px;
 }
 .users .col-list p{
-
+	font-size: 10px;
+	padding
+}
+.title i{
+	background: #ffffff;
+    font-size: 7px;
+    color: #000000;
+    margin-left: 4px;
+    padding: 2px 3px;
+    vertical-align: top;
 }
 .select-style{
 	background: #e2e3e4;
-	padding: 15px 10px;
+	padding: 6px 10px;
 }
 .tb-cell{
 	display: inline-block;
