--- a/Alterwego/css/users-fixed.css
+++ b/Alterwego/css/users-fixed.css
@@ -1,3 +1,24 @@
+/*-----------------------------------------------*/
+.show-type{
+    z-index: 2;
+    position: absolute;
+    left: 0;
+    width: 100%;
+    background-color: #fff;
+}
+p{
+    margin: 0 !important;
+}
+.ic{
+    cursor: pointer;
+}
+.accpte{
+    color: #4fdea0;
+}
+.refs{
+    color:#ffb300;
+}
+/*-----------------------------------------------*/
 header{
     box-shadow: 0px 0px 15px 5px #d2d2d2;
     background: white;
