--- a/app/src/css/style.css
+++ b/app/src/css/style.css
@@ -206,7 +206,7 @@ input.size12
 }
 .wrap{
 	width: 90%;
-	margin: 18px auto;
+	margin: 0px auto;
 	position: relative;
 	overflow: hidden;
 }
@@ -223,7 +223,7 @@ header{
 .resume{
 	width: 110px;
     float: left;
-    padding-left: 57px;
+    padding-left: 52px;
     /*background: red;*/
     padding-right: 14px;
     padding-top: 22px;
@@ -296,19 +296,25 @@ header{
 	right: 8px;
     position: absolute;
 }
-
+.wrap .menu li.no-icon{
+	width: 100%;    
+    padding: 14px 0;
+    margin-bottom: 10px;
+}
+.wrap .menu li.no-icon a:after{
+	display: none;
+}
 .clear{
 	clear: both;
 	width: 100%;
 	overflow: hidden;
 }
 .first{
-	width: calc(100% - 324px);
-	display: inline-block;
-	padding-left: 55px;
+	width: calc(100% - 344px);
+    display: inline-block;
+    padding-left: 60px;
 }
 .first span{
-	/*font-family: arial, sans;*/
 	font-size: 11px;
 	color: #9c9c9c;
 }
@@ -346,11 +352,11 @@ header{
 	padding-right: 5px;
 }
 .second{
-	width: 244px;
-	height: 15px;
-	float: right;
-	display: inline-block;
-	height: auto;
+	width: 270px;
+    float: right;
+    display: inline-block;
+    height: auto;
+    padding: 3px 7px;
 }
 .second .notif{
 	padding: 0 10px;
